I really need to clean up this repo. sorry. the  main tex file is paper_short_2.tex

--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -263,6 +263,50 @@
 
 
 
+% pure extraction papers:
+@inproceedings{hong2007real,
+  title={Real-Time Foreground Segmentation for the Moving Camera Based on H. 264 Video Coding Information},
+  author={Hong, W.D. and Lee, T.H. and Chang, P.C.},
+  booktitle={Future Generation Communication and Networking (FGCN 2007)},
+  volume={1},
+  pages={385--390},
+  year={2007},
+  organization={IEEE}
+}
+
+@article{chien2002efficient,
+  title={Efficient moving object segmentation algorithm using background registration technique},
+  author={Chien, S.Y. and Ma, S.Y. and Chen, L.G.},
+  journal={Circuits and Systems for Video Technology, IEEE Transactions on},
+  volume={12},
+  number={7},
+  pages={577--586},
+  year={2002},
+  publisher={IEEE}
+}
+
+@inproceedings{zhang2007moving,
+  title={Moving object extraction with a hand-held camera},
+  author={Zhang, G. and Jia, J. and Xiong, W. and Wong, T.T. and Heng, P.A. and Bao, H.},
+  booktitle={Computer Vision, 2007. ICCV 2007. IEEE 11th International Conference on},
+  pages={1--8},
+  year={2007},
+  organization={IEEE}
+}
+
+@article{kim2002fast,
+  title={Fast and automatic video object segmentation and tracking for content-based applications},
+  author={Kim, C. and Hwang, J.N.},
+  journal={Circuits and Systems for Video Technology, IEEE Transactions on},
+  volume={12},
+  number={2},
+  pages={122--129},
+  year={2002},
+  publisher={IEEE}
+}
+
+
+
 
 
 
