--- a/ltx/paper_short.tex
+++ b/ltx/paper_short.tex
@@ -51,9 +51,9 @@ This paper proposes a technique for the unsupervised detection and tracking of a
 \section{Introduction}
 \label{sec:introduction}
 
-We define the task of automated detection and tracking of arbitrary objects in videos to consist of three actions: determining the spatiotemporal regions of a video that constitute objects (``extraction''), finding the positions and/or shapes of distinct objects (``localization''), and maintaining the identities of the detected objects over time (``tracking''). An ability to carry out these tasks in an automated manner is useful for many fields that make use of video data, including robotics, video surveillance, time-lapse microscopy, and video summarization. Algorithms able to be applied to a variety of objects and video types are particularly desirable. This paper introduces a new framework involving the use of dependent Dirichlet process mixture models. This framework provides a foundation for a class of unsupervised algorithms that can detect and track arbitrary objects in a wide range of videos.
+We define the task of automated detection and tracking of arbitrary objects in videos to be: extraction, localization, and tracking. Extraction is the task of determining the spatiotemporal regions of a video that constitute objects, localization is the task of finding the positions and/or shapes of distinct objects, and tracking is the task of maintaining the identities of the detected objects over time. An ability to carry out these tasks in an automated manner is useful for many fields that make use of video data, including robotics, video surveillance, time-lapse microscopy, and video summarization. Algorithms able to be applied to a variety of objects and video types are particularly desirable. This paper introduces a new framework involving the use of dependent Dirichlet process mixture models. This framework provides a foundation for a class of unsupervised algorithms that can detect and track arbitrary objects in a wide range of videos.
 
-Research on methods for general detection and tracking of objects has focused on one of either extraction, localization, or tracking. Integrating all three tasks in a system for multiple arbitrary objects and diverse video types was not often a primary focus. Accomplishing the three tasks in a cohesive manner has been pursued more recently and has produced algorithms that can, in a fully automated way, accomplish unsupervised detection and tracking---or in short, that can determine the spatiotemporal region of a video occupied by each distinct object. An example of general detection and tracking is called ``blob tracking'', which typically refers to methods that perform extraction and localization of objects in each frame independently. Tracking involves finding blobs with similar locations and appearances over time. The main blob tracking challenges are the difficulty of segmenting neighboring or occluding objects in a given frame \cite{zhao2004tracking} and preventing multiple tracked blobs from merging into a single object \cite{vermaak_2003}. These difficulties stem from performing detection via segmentation on individual frames.
+Research on methods for general detection and tracking of objects has focused on one of either extraction, localization, or tracking. Integrating all three tasks in a system for multiple arbitrary objects and diverse video types was not often a primary focus. Accomplishing the three tasks in a cohesive manner has been pursued more recently and has produced algorithms that can, in a fully automated way, accomplish unsupervised detection and tracking---or in short, that can determine the spatiotemporal region of a video occupied by distinct objects. An example of general detection and tracking is called ``blob tracking'', which typically refers to methods that perform extraction and localization of objects in each frame independently. Tracking involves finding blobs with similar locations and appearances over time. The main blob tracking challenges are the difficulty of segmenting neighboring or occluding objects in a given frame \cite{zhao2004tracking} and preventing multiple tracked blobs from merging into a single object \cite{vermaak_2003}. These difficulties stem from performing detection via segmentation on individual frames.
 
 This paper presents the use of a Bayesian nonparametric mixture model for general, unsupervised multiple object detection and tracking. This method provides both a widely applicable way to detect arbitrary objects in videos---particularly in cases where frame-by-frame segmentation is difficult or video quality is low and extraction is noisy---and a general framework for identifying and isolating objects during tracking. Specifically, this work describes how a dependent Dirichlet process mixture model can accomplish these goals. The DDP is first reviewed in the abstract. This model can be used with arbitrary extraction procedures and object appearance representations that may be desired in future studies. We then present our specific model for data obtained via a basic extraction procedure. We describe inference algorithms for the DDP, and specifically our specific model, that allow object localization and tracking to be carried out. We demonstrate our implementation on multiple synthetic and benchmark datasets. Standard performance metrics for each supports our hypothesis that general extraction combined withe sophisticated inference can perform detection and tracking at a level comperable to state-of-the-art, object specific algorithms.
 
