a few more edits. as before, main file is: paper_short_2.tex

--- a/ltx/paper_short_2.tex
+++ b/ltx/paper_short_2.tex
@@ -116,7 +116,7 @@ This paper describes the data extraction procedures (Section~\ref{sec:dataextrac
 \section{Data Extraction}
 \label{sec:dataextraction}
 
-A basic set of observations that can be extracted from video are three-dimensional points $\bold{x} = ( x_{1}, x_{2}, t ) \in \mathbb{R}^{2} \times \mathbb{Z}_{+}$, where $x_{1}$ and $x_{2}$ are the two spatial locations of a pixel. Extraction procedures, such as those discussed in Section~\ref{sec:introduction}, are used to isolate pixels lying in the regions of a video that represent objects. For implementation in experiments (Section~\ref{sec:experiments}), we desire an extraction procedure that is as unsophisticated as possible, both to gauge the robustness of this method on potentially noisy extraction data and to ensure that the procedure is applicable to a wide range of videos. Accordingly, we carry out a method called ``frame differencing'' for all experiments, which locates regions within video frames that contain motion by recording the positions of pixels exhibiting large enough differences in intensity or value between succesive frames. Frame differencing is unsophisticated, computationally inexpensive, able to be applied to a wide range of static, single-camera videos (note that videos used in all experiments were stationary; moving-camera videos require extraction methods useful for non-stationary video, such as \willie{cite cite cite}). Examples of pixel location data extracted via frame differencing are shown in Fig.~\ref{fig:img_and_framediff}(a-j).
+A basic set of observations that can be extracted from video are three-dimensional points $\bold{x} = ( x_{1}, x_{2}, t ) \in \mathbb{R}^{2} \times \mathbb{Z}_{+}$, where $x_{1}$ and $x_{2}$ are the two spatial locations of a pixel. Extraction procedures, such as those discussed in Section~\ref{sec:introduction}, are used to isolate pixels lying in the regions of a video that represent objects. For implementation in experiments (Section~\ref{sec:experiments}), we desire an extraction procedure that is as unsophisticated as possible, both to gauge the robustness of this method on potentially noisy extraction data and to ensure that the procedure is applicable to a wide range of videos. Accordingly, we carry out a method called ``frame differencing'' for all experiments, which locates regions within video frames that contain motion by recording the positions of pixels exhibiting large enough differences in intensity or value between succesive frames. Frame differencing is unsophisticated, computationally inexpensive, able to be applied to a wide range of static, single-camera videos (note that videos used in all experiments were stationary; moving-camera videos require extraction methods useful for non-stationary video, such as \cite{chien2002efficient, zhang2007moving}). Examples of pixel location data extracted via frame differencing are shown in Fig.~\ref{fig:img_and_framediff}(a-j).
 
 Incorporating color information into our model allows us to infer object color, better maintain the identity of adjacent objects, and track objects through occlusion with greater accuracy. We therefore capture the color of each extracted pixel. Specifically, for each pixel $\bold{x} = ( x_{1}, x_{2}, t )$ recorded during frame differencing, we specify a square, $L$ pixels in length, centered on $(x_{1}, x_{2})$, that contains a set of pixels surrounding $\bold{x}$ in frame $t$. We choose a scalar color value that is able to be computed for each pixel; this value could, for example, be some function of the red-green-blue (r-g-b) or hue-saturation-value (h-s-v) characteristic of a pixel. The color value of each of the selected pixels surrounding $\bold{x}$ is recorded. Afterwards, the set of possible color values (ie the range of color values to which a pixel may be assigned) is partitioned into $V$ bins, and the number of pixels with a color value lying in each of the bins yields a $V$ dimensional vector of ``color counts''. This vector represents a discrete distribution over colors in the vicinity of a pixel. We will refer to this extraction technique as ``color counting''.
 
@@ -333,7 +333,7 @@ $\rho$  &  The deletion parameter. A higher value will give objects an increased
 \end{tabular}
 \end{center}
 
-We have not found an easily justifiable way to choose parameters. For the appearance and movement parameters, samples were drawn given a range of parameter values, and those that yielded samples similar in appearance to the experimental data were kept (a technique also performed in \cite{gasthaus_thesis}). The parameters chosen for use in experiments (Section~\ref{sec:experiments}) were accepted based on the fact that they yielded reasonable results. Additionally, a sensitivity analysis was carried out for the concentration and deletion parameters ($\alpha$ and $\rho$), where a range of values for both were chosen, and inference performed for each; results of this analysis are discussion in Section~\ref{sec:sensitivityanalysis}.
+The parameters chosen for use in experiments (Section~\ref{sec:experiments}) were accepted based on the fact that they yielded reasonable results. Additionally, a sensitivity analysis was carried out for the concentration and deletion parameters ($\alpha$ and $\rho$), where a range of values for both were chosen, and inference performed for each; results of this analysis are discussion in Section~\ref{sec:sensitivityanalysis}.
 
 
 
@@ -343,9 +343,7 @@ We have not found an easily justifiable way to choose parameters. For the appear
 \section{Inference}
 \label{sec:inference}
 
-Bayesian inference algorithms, which infer distributions over latent model parameters, are used to get detection and tracking results. A variety of methods previously developed for statistical inference can be applied to the generative model defined in Sections~\ref{sec:} and \ref{sec}.
-
- we separate presentations of model and inference so that multiple inference methods, each with its own benefits in terms of precision and speed, can be formulated as independent algorithms for detection and tracking. This section provides background on the two inference algorithms implemented in this study, which are both used to perform Bayesian inference on the model described in Section~\ref{sec:modelspec}. The first is a type of Markov Chain Monte Carlo (MCMC) batch inference, which uses Gibbs sampling to generate samples from the posterior distribution of the model. The second is a type of Sequential Monte Carlo (SMC) inference, also known as a particle filter, which also generates samples from the posterior distribution of the model, but in a sequential manner that makes use of the time-dependent nature of the data.
+Bayesian inference algorithms, which infer distributions over latent model parameters, are used to get detection and tracking results. A variety of methods previously developed for statistical inference can be applied to the generative model defined in Sections~\ref{sec:gpuddpm} and \ref{sec:modelspecification}. We've separated descriptions of the model and inference algorithms so that multiple inference methods, each with its own benefits in terms of precision and speed, can be formulated as independent algorithms for detection and tracking. This section provides background on the two Bayesian inference algorithms implemented in this study. The first is a type of Markov Chain Monte Carlo (MCMC) batch inference, which uses Gibbs sampling to generate samples from the posterior distribution of the model. The second is a type of Sequential Monte Carlo (SMC) inference, also known as a particle filter, which also generates samples from the posterior distribution of the model, but in a sequential manner that makes use of the time-dependent nature of the data.
 
 
 \subsection{MCMC: Batch Inference}
@@ -527,8 +525,7 @@ l_{i,t}  &\sim  \text{Geo}(\rho)  \\
 d_{i,t}^{*}  &= l_{i,t} + t + 1
 \end{split}
 \end{align}
-and accept or reject this sample using the standard M-H acceptance ratio. 
-
+and accept or reject this sample using the standard M-H acceptance ratio.
 %%%%%
 % need to include the "standard M-H acceptance ratio"
 %%%%%
