first final draft added (paper_short_2.tex). lots of new and adjusted images

--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -302,14 +302,98 @@
   publisher={IEEE}
 }
 
+% review of background subtraction techniques
+
+@inproceedings{piccardi2004background,
+  title={Background subtraction techniques: a review},
+  author={Piccardi, M.},
+  booktitle={Systems, Man and Cybernetics, 2004 IEEE International Conference on},
+  volume={4},
+  pages={3099--3104},
+  year={2004},
+  organization={Ieee}
+}
+
+@article{zhang2001segmentation,
+  title={Segmentation of moving objects in image sequence: A review},
+  author={Zhang, D. and Lu, G.},
+  journal={Circuits, systems, and signal processing},
+  volume={20},
+  number={2},
+  pages={143--183},
+  year={2001},
+  publisher={Springer}
+}
 
 
+% refs from PETS2009/2010 performance comparison
+@inproceedings{arsic2009multi,
+  title={Multi camera person tracking applying a graph-cuts based foreground segmentation in a homography framework},
+  author={Arsic, D. and Lyutskanov, A. and Rigoll, G. and Kwolek, B.},
+  booktitle={Performance Evaluation of Tracking and Surveillance (PETS-Winter), 2009 Twelfth IEEE International Workshop on},
+  pages={1--8},
+  year={2009},
+  organization={IEEE}
+}
 
+@inproceedings{berclaz2009multiple,
+  title={Multiple object tracking using flow linear programming},
+  author={Berclaz, J. and Fleuret, F. and Fua, P.},
+  booktitle={Performance Evaluation of Tracking and Surveillance (PETS-Winter), 2009 Twelfth IEEE International Workshop on},
+  pages={1--8},
+  year={2009},
+  organization={IEEE}
+}
 
+@inproceedings{conte2010performance,
+  title={Performance evaluation of a people tracking system on pets2009 database},
+  author={Conte, D. and Foggia, P. and Percannella, G. and Vento, M.},
+  booktitle={Advanced Video and Signal Based Surveillance (AVSS), 2010 Seventh IEEE International Conference on},
+  pages={119--126},
+  year={2010},
+  organization={IEEE}
+}
 
+@inproceedings{bolme2009simple,
+  title={Simple real-time human detection using a single correlation filter},
+  author={Bolme, D.S. and Lui, Y.M. and Draper, BA and Beveridge, JR},
+  booktitle={Performance Evaluation of Tracking and Surveillance (PETS-Winter), 2009 Twelfth IEEE International Workshop on},
+  pages={1--8},
+  year={2009},
+  organization={IEEE}
+}
 
+@article{breitenstein2009markovian,
+  title={Markovian tracking-by-detection from a single, uncalibrated camera},
+  author={Breitenstein, M.D. and Reichlin, F. and Leibe, B. and Koller-Meier, E. and Van Gool, L.},
+  journal={Work},
+  year={2009}
+}
 
+@inproceedings{ge2009evaluation,
+  title={Evaluation of sampling-based pedestrian detection for crowd counting},
+  author={Ge, W. and Collins, R.T.},
+  booktitle={Performance Evaluation of Tracking and Surveillance (PETS-Winter), 2009 Twelfth IEEE International Workshop on},
+  pages={1--7},
+  year={2009},
+  organization={IEEE}
+}
 
+@inproceedings{alahi2009sparsity,
+  title={Sparsity-driven people localization algorithm: Evaluation in crowded scenes environments},
+  author={Alahi, A. and Jacques, L. and Boursier, Y. and Vandergheynst, P.},
+  booktitle={Performance Evaluation of Tracking and Surveillance (PETS-Winter), 2009 Twelfth IEEE International Workshop on},
+  pages={1--8},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{yang2009probabilistic,
+  title={Probabilistic multiple people tracking through complex situations},
+  author={Yang, J. and Vela, PA and Shi, Z. and Teizer, J.},
+  booktitle={11th IEEE International Workshop on Performance Evaluation of Tracking and Surveillance},
+  year={2009}
+}
 
 
 
