newest draft (paper_short_2.tex) is here

--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -239,8 +239,23 @@
   publisher={Springer}
 }
 
+% misc unsupervised detection and tracking
+@ARTICLE{paragios2000geodesic, 
+author={Paragios, N. and Deriche, R.}, 
+journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on}, 
+title={Geodesic active contours and level sets for the detection and tracking of moving objects}, 
+year={2000}, 
+month={mar}, 
+volume={22}, 
+number={3}, 
+pages={266 -280}, 
+keywords={Hermes;edge detection;front propagation;geodesic active contours;image sequences;level set theory;motion detection;moving object tracking;objective function;optimisation;statistical analysis;edge detection;image sequences;motion estimation;optimisation;statistical analysis;target tracking;}, 
+doi={10.1109/34.841758}, 
+ISSN={0162-8828},}
+
 
 % gelman book
+% -----------
 @book{gelman2004bayesian,
   title={Bayesian data analysis},
   author={Gelman, A.},
@@ -250,6 +265,7 @@
 
 
 % resampling strategies for SMC particle filtering inference paper
+% -----------
 @inproceedings{douc2005comparison,
   title={Comparison of resampling schemes for particle filtering},
   author={Douc, R. and Capp{\'e}, O.},
@@ -303,6 +319,7 @@
 }
 
 % review of background subtraction techniques
+% --------
 
 @inproceedings{piccardi2004background,
   title={Background subtraction techniques: a review},
@@ -325,8 +342,59 @@
   publisher={Springer}
 }
 
+% papers dealing with object specific multi target detection and tracking
+% -----
+
+@INPROCEEDINGS{Okuma04aboosted,
+    author = {Kenji Okuma and Ali Taleghani and Nando De Freitas and O De Freitas and James J. Little and David G. Lowe},
+    title = {A Boosted Particle Filter: Multitarget Detection and Tracking},
+    booktitle = {In ECCV},
+    year = {2004},
+    pages = {28--39}
+}
+
+@InProceedings{eth_biwi_00633,
+  author = {Michael D. Breitenstein and Fabian Reichlin and Bastian Leibe and Esther Koller-Meier and Luc Van Gool},
+  title = {Robust Tracking-by-Detection using a Detector Confidence Particle Filter},
+  booktitle = {IEEE International Conference on Computer Vision},
+  year = {2009},
+  month = {October},
+  keywords = {}
+}
+
+@INPROCEEDINGS{4036928, 
+  author={Guangyu Zhu and Changsheng Xu and Qingming Huang and Wen Gao}, 
+  booktitle={Multimedia and Expo, 2006 IEEE International Conference on}, 
+  title={Automatic Multi-Player Detection and Tracking in Broadcast Sports Video using Support Vector Machine and Particle Filter}, 
+  year={2006}, 
+  month={july}, 
+  volume={}, 
+  number={}, 
+  pages={1629 -1632}, 
+  keywords={SVR particle filter;automatic multiplayer detection;playfield segmentation;sequential Monte Carlo framework;sports video broadcasting;support vector machine;support vector regression;tracking approach;Monte Carlo methods;digital video broadcasting;image segmentation;object detection;sport;support vector machines;tracking filters;video signal processing;}, 
+  doi={10.1109/ICME.2006.262859}, 
+  ISSN={}
+}
+
+@ARTICLE{leibe2008coupled, 
+  author={Leibe, B. and Schindler, K. and Cornelis, N. and Van Gool, L.}, 
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on}, 
+  title={Coupled Object Detection and Tracking from Static Cameras and Moving Vehicles}, 
+  year={2008}, 
+  month={oct. }, 
+  volume={30}, 
+  number={10}, 
+  pages={1683 -1698}, 
+  keywords={conservative hypothesis pruning;coupled object detection;incremental computation;minimum description length hypothesis selection framework;multiobject tracking;multiview-multicategory object recognition;object tracking;scene geometry;spacetime trajectory estimation;state-of-the-art object detector;static cameras;subsequent trajectory estimation module;surveillance-type scenario;vehicle passing;video sequences;cameras;image resolution;image sensors;image sequences;object detection;object recognition;tracking;video signal processing;Algorithms;Artificial Intelligence;Image Enhancement;Image Interpretation, Computer-Assisted;Imaging, Three-Dimensional;Motion;Motor Vehicles;Pattern Recognition, Automated;Photography;Reproducibility of Results;Sensitivity and Specificity;}, 
+  doi={10.1109/TPAMI.2008.170}, 
+  ISSN={0162-8828}
+}
+
+
+
 
 % refs from PETS2009/2010 performance comparison
+
 @inproceedings{arsic2009multi,
   title={Multi camera person tracking applying a graph-cuts based foreground segmentation in a homography framework},
   author={Arsic, D. and Lyutskanov, A. and Rigoll, G. and Kwolek, B.},
