newest version. main difference: removal of sensitivity analysis figures, lots of edits

--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -465,6 +465,87 @@ ISSN={0162-8828},}
 
 
 
+% example of people tracking that incorporates dynamiks
+
+@INPROCEEDINGS{choo2001people, 
+author={Kiam Choo and Fleet, D.J.}, 
+booktitle={Computer Vision, 2001. ICCV 2001. Proceedings. Eighth IEEE International Conference on}, 
+title={People tracking using hybrid Monte Carlo filtering}, 
+year={2001}, 
+month={}, 
+volume={2}, 
+number={}, 
+pages={321 -328 vol.2}, 
+keywords={3-D human motion;HMC filter;Monte Carlo filtering;hidden state estimation;multiple Markov chains;nonlinear dynamical systems;people tracking;Markov processes;Monte Carlo methods;motion estimation;nonlinear dynamical systems;state estimation;tracking;}, 
+doi={10.1109/ICCV.2001.937643}, 
+ISSN={},}
+
+
+% fwood, a nonparametric bayesian alternative to spike sorting
+
+@article{Wood2008nonparametric,
+title = "A nonparametric Bayesian alternative to spike sorting",
+journal = "Journal of Neuroscience Methods",
+volume = "173",
+number = "1",
+pages = "1 - 12",
+year = "2008",
+note = "",
+issn = "0165-0270",
+doi = "10.1016/j.jneumeth.2008.04.030",
+url = "http://www.sciencedirect.com/science/article/pii/S0165027008002549",
+author = "Frank Wood and Michael J. Black",
+keywords = "Spike sorting",
+keywords = "Nonparametric Bayesian methods",
+keywords = "Dirichlet process mixture models"
+}
+
+
+
+
+
+
+
+
+
+
+
+% ------------------------------------------------------------------------------------------------
+% ------------------------------------------------------------------------------------------------
+% ------------------------------------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
